@@ -209,7 +209,7 @@ div#menu {
 div#head {
 	font-size: 8pt;
 	width: 960px;
-	height: 60px;
+	height: 87px;/*84px;*/ /*height: 60px;*/
 	background: url(../../images/header.jpg);
 	border-bottom: solid 2px #555;
 }
