@@ -1,3 +1,10 @@
+2009-07-22  Miguel de Dios  <miguel.dedios@artica.es>
+
+	* general/header.php, images/lupa_15x15.png, include/functions_html.php
+	include/styles/pandora.css, operation/search_results.php: add global
+	search bar in the header for searching Agents, Maps, Reports, Graphs,
+	Alerts and Users...if you user have access level...
+
 2009-07-20  Miguel de Dios  <miguel.dedios@artica.es>
 
 	* operation/agentes/tactical.php, operation/agentes/status_monitor.php: add
